--- a/app/src/main/res/layout/drug_layout.xml
+++ b/app/src/main/res/layout/drug_layout.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="horizontal"
+    android:gravity="center_vertical"
     android:padding="10dp">
 
 
@@ -10,26 +11,41 @@
         android:id="@+id/DrugName"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="2"
+        android:layout_weight="3"
         android:text="DrugName"
-        android:textSize="18sp"
+        android:gravity="center_vertical"
+        android:textSize="22sp"
         android:textStyle="bold" />
 
-    <TextView
-        android:id="@+id/TodayDosage"
+    <LinearLayout
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:text="TodayDosage"
-        android:textSize="18sp"
-        android:textStyle="italic" />
+        android:layout_weight="2"
+        android:orientation="horizontal">
 
-    <TextView
-        android:id="@+id/TotalDosage"
+        <TextView
+            android:id="@+id/TodayDosage"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="TodayDosage"
+            android:gravity="center"
+            android:textSize="18sp"
+            android:textStyle="italic" />
+    </LinearLayout>
+
+    <LinearLayout
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:text="TotalDosage"
-        android:textSize="18sp"
-        android:textStyle="italic" />
+        android:layout_weight="2"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/TotalDosage"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="TodayDosage"
+            android:textSize="18sp"
+            android:textStyle="italic" />
+    </LinearLayout>
 </LinearLayout>
