--- a/app/src/main/res/layout/drug_layout.xml
+++ b/app/src/main/res/layout/drug_layout.xml
@@ -21,6 +21,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="2"
+        android:gravity="right"
         android:orientation="horizontal">
 
         <TextView
@@ -37,6 +38,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="2"
+        android:gravity="right"
         android:orientation="horizontal">
 
         <TextView
