--- a/app/src/main/res/layout/drug_layout.xml
+++ b/app/src/main/res/layout/drug_layout.xml
@@ -19,8 +19,8 @@
 
     <LinearLayout
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="2"
+        android:layout_height="0dp"
+        android:layout_weight="0"
         android:gravity="right"
         android:orientation="horizontal">
 
@@ -38,7 +38,6 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="2"
-        android:gravity="right"
         android:orientation="horizontal">
 
         <TextView
