+ update + set dosage as total Dosage + delete column in patient Activity to delete drug + update Notification + update ui of patient Activity

--- a/app/src/main/res/layout/drug_layout.xml
+++ b/app/src/main/res/layout/drug_layout.xml
@@ -6,12 +6,20 @@
     android:gravity="center_vertical"
     android:padding="10dp">
 
+    <ImageView
+        android:id="@+id/delete"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+
+        android:paddingEnd="30dp"
+        android:src="@drawable/ic_baseline_delete_24" />
 
     <TextView
         android:id="@+id/DrugName"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="3"
+        android:layout_weight="2"
         android:text="DrugName"
         android:gravity="center_vertical"
         android:textSize="22sp"
